Fix messages not showing for a user in UserTimeline if the the user isn't logged in.

--- a/MiniTwitApi/Client/wwwroot/css/app.css
+++ b/MiniTwitApi/Client/wwwroot/css/app.css
@@ -93,7 +93,7 @@ div.page {
     background: white;
     border: 1px solid #6ECCC4;
     width: 700px;
-    margin: 30px auto;
+    margin: auto;
 }
 
 div.page h1 {
